--- a/application/templates/matches/new.html
+++ b/application/templates/matches/new.html
@@ -6,12 +6,12 @@
   <input type="text" name="hometeam" required/><br/>
   Away team<br/>
   <input type="text" name="awayteam" required/><br/>
-  Home win probability<br/>
-  <input type="number" step="0.01" min="0" max="1" name="prob_home" required/><br/>
-  Draw probability<br/>
-  <input type="number" step="0.01" min="0" max="1" name="prob_draw" required/><br/>
-  Away win probability<br/>
-  <input type="number" step="0.01" min="0" max="1" name="prob_away" required/><br/>
+  Home win probability (%)<br/>
+  <input type="number" step="1" min="0" max="100" name="prob_home" required/><br/>
+  Draw probability (%)<br/>
+  <input type="number" step="1" min="0" max="100" name="prob_draw" required/><br/>
+  Away win probability (%)<br/>
+  <input type="number" step="1" min="0" max="100" name="prob_away" required/><br/>
   Date<br/>
   <input type="date" name="date" required/><br/>
   Time<br/>
