--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Bet1X2</title>
+    {% with messages = get_flashed_messages() %}
+  		{% if messages %}
+    		<ul class=flashes>
+    		{% for message in messages %}
+      		<li>{{ message }}</li>
+    		{% endfor %}
+    		</ul>
+  		{% endif %}
+		{% endwith %}
   </head>
 
   <body>
@@ -12,6 +21,8 @@
       </p>
       {% else %}
       <a href="{{ url_for('auth_login') }}">Login</a>
+      <br>
+      <a href="{{ url_for('bettors_form') }}">Create an account</a>
       {% endif %}
       
     <ul>
