Ottelua voi muokata, alustavat kohteiden listaukset

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -28,6 +28,8 @@
     <ul>
 	  	<li><a href="{{ url_for('matches_index') }}">List matches</a></li>
 	  	<li><a href="{{ url_for('matches_form') }}">Add a match</a></li>
+		<li><a href="{{ url_for('betting_offers_index') }}">List betting offers</a></li>
+		<li><a href="{{ url_for('betting_offers_form') }}">Add a betting_offer</a></li>
     </ul>
     
   	{% block body %}
