--- a/application/templates/matches/list.html
+++ b/application/templates/matches/list.html
@@ -23,6 +23,11 @@
 			<td>
 				<form method="POST" action="{{ url_for('matches_set_result', match_id=match.id) }}">
 	  			<input type="submit" value="Update match information"/>
+        </form>
+      </td>
+      <td>
+        <form method="POST" action="{{ url_for('matches_delete', match_id=match.id) }}">
+	  			<input type="submit" value="Delete match"/>
 				</form>
       </td>
     </tr>
