--- a/application/templates/betting_offers/offer_list.html
+++ b/application/templates/betting_offers/offer_list.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
+<form method="POST" action="{{ url_for('bet_coupons_form') }}">
   <table cellspacing="8">
     <tr align="left">
       <th>Home team</th>
@@ -22,7 +23,17 @@
       <td>{{ match_offer[1].max_stake }}</td>
       <td>{{ match_offer[1].active }}</td>
       <td>{{ match_offer[1].closed }}</td>
+      <td>
+        <input type="radio" name={{ match_offer[1].id }} value="Add" checked="checked"> Add to bet coupon
+        <input type="radio" name={{ match_offer[1].id }} value="Remove" checked="checked"> Remove from bet coupon
+      </td>
     </tr>
     {% endfor %}
+    <tr>
+      <td>
+        <input type="submit" value="Create a bet coupon"/>
+      </td>
+    </tr>
   </table>
+</form>
 {% endblock %}
