--- a/application/templates/matches/new.html
+++ b/application/templates/matches/new.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-  
+
 {% block body %}
 <form method="POST" action="{{ url_for('matches_create') }}">
   <table>
@@ -112,6 +112,7 @@
 			<td colspan="5">
 				<input type="submit" value="Add a new match"/>
 			</td>
-  </tr>
+    </tr>
+  </table>
 </form>
 {% endblock %}
