--- a/application/templates/betting_offers/offer_list.html
+++ b/application/templates/betting_offers/offer_list.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <form method="POST" action="{{ url_for('bet_coupons_form') }}">
-  <table cellspacing="8">
+  <table border="1" cellspacing="8">
     <tr align="left">
       <th>Home team</th>
 			<th>Away team</th>
