--- a/application/templates/matches/show_match.html
+++ b/application/templates/matches/show_match.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<table cellspacing="8">
+<table border="1" cellspacing="8">
   <tr align="left">
     <th>Home team</th>
     <th>Away team</th>
