--- a/application/templates/matches/update.html
+++ b/application/templates/matches/update.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <form method="POST" action="{{ url_for('matches_update', match_id=match_id) }}">
-  <table>
+  <table border="1">
     <tr>
 			<td>
 				{{ form.home.label }}
