--- a/application/templates/bet_coupons/new_bet_coupon.html
+++ b/application/templates/bet_coupons/new_bet_coupon.html
@@ -1,36 +1,34 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<form method="POST" action="{{ url_for('bet_coupons_create', betting_offer_id = match_offer_tuples[0][1].id) }}">
+<form method="POST" action="{{ url_for('bet_coupons_create', offer_id_1 = offer_id_1, offer_id_2 = offer_id_2, offer_id_3 = offer_id_3,
+                        offer_id_4 = offer_id_4, offer_id_5 = offer_id_5, offer_id_6 = offer_id_6) }}">
+    {% for match_offer in match_offer_tuples %}
+    <table border="1" cellspacing="8">
+      <tr>
+        <th>{{ match_offer[0].home }}</th>
+        <th>{{ " - " }}</th>
+        <th>{{ match_offer[0].away }}</th>
+      </tr>
+      <tr>
+        <td>Home win:</td>
+        <td>Draw:</td>
+        <td>Away win</td>
+      </tr>
+      <tr>
+        <td>{{ match_offer[1].odds_1 }}</td>
+        <td>{{ match_offer[1].odds_x }}</td>
+        <td>{{ match_offer[1].odds_2 }}</td>
+      </tr>
+      <tr>
+        <td><input type="radio" name={{ match_offer[1].id }} value="1" checked="checked">1</td>
+        <td><input type="radio" name={{ match_offer[1].id }} value="x" checked="checked">x</td>
+        <td><input type="radio" name={{ match_offer[1].id }} value="2" checked="checked">2</td>
+      </tr>
+    </table>
+    <br>
+    {% endfor %}
   <table>
-    <tr>
-      <td>
-        <ul>
-					{% for match_offer in match_offer_tuples %}
-          {{ match_offer[0].home }} {{ "-"}} {{ match_offer[0].away }}
-					<li>{{ "Home win:" }} {{ match_offer[1].odds_1 }}</li>
-          <li>{{ "Draw:" }} {{ match_offer[1].odds_x }}</li>
-          <li>{{ "Away win:" }} {{ match_offer[1].odds_2 }}</li>
-          <br>
-					{% endfor %}
-				</ul>
-			</td>
-    </tr>
-    <tr>
-			<td>
-				{{ form.choice_1x2.label }}
-			</td>
-			<td>
-				{{ form.choice_1x2 }}
-			</td>
-			<td>
-				<ul>
-					{% for error in form.choice_1x2.errors %}
-					<li>{{ error }}</li>
-					{% endfor %}
-				</ul>
-			</td>
-		</tr>
     <tr>
 			<td>
 				{{ form.stake_eur.label }}
