--- a/application/templates/bet_coupons/new_bet_coupon.html
+++ b/application/templates/bet_coupons/new_bet_coupon.html
@@ -23,7 +23,9 @@
         <td><input type="radio" name={{ match_offer[1].id }} value="1" checked="checked">1</td>
         <td><input type="radio" name={{ match_offer[1].id }} value="x" checked="checked">x</td>
         <td><input type="radio" name={{ match_offer[1].id }} value="2" checked="checked">2</td>
-        <td><input type="hidden" name={{ "hidden" ~ match_offer[1].id }} value={{ match_offer[1].id }}></td>
+      </tr>
+      <tr>
+        <input type="hidden" name={{ "hidden" ~ match_offer[1].id }} value={{ match_offer[1].id }}>
       </tr>
     </table>
     <br>
