Kohteiden vaihtoja rahallisesti ja rahamäärän jakautumista eri vaihtoehtojen kesken sekä miten jakauma vertautuuu tn-arvioon voi tarkastella (yhteenvetokyselyt)

--- a/application/templates/statistics/turnovers.html
+++ b/application/templates/statistics/turnovers.html
@@ -28,11 +28,11 @@
         {% endif %}
       </td>
       <td>{{ r[7] }}</td>
-			<!-- <td>
-				<form method="GET" action="{{ url_for('show_distribution', offer_id = r[4]) }}">
+			<td>
+				<form method="GET" action="{{ url_for('show_distribution', offer_id = r[3], home = r[0], away = r[1]) }}">
 	  			<input type="submit" value="Show distribution of turnover"/>
         </form>
-      </td> -->
+      </td>
     </tr>
     {% endfor %}
   </table>
