Pelaaja voi poistaa tilinsä jos ratkeamattomia vetokuponkeja ei ole, lisäksi erillinen vahvistusnäkymä tilin poistolle, vain aktiiviset ja ei-suljetut vetokohteet näkyvät listauksessa, kohdetta ei voi lisätä otteluun jos sen tulos ei ole 'tbd' eli to be decided

--- a/application/templates/auth/show_user.html
+++ b/application/templates/auth/show_user.html
@@ -19,12 +19,12 @@
       </form>
     </td>
   </tr>
-  <!-- <tr>
+  <tr>
     <td>
-      <form method="POST" action="{{ url_for('bettor_delete') }}">
-        <input type="submit" value="Delete account"/>
+      <form method="GET" action="{{ url_for('bettor_delete') }}">
+        <input type="submit" value="Start account deletion process"/>
       </form>
     </td>
-  </tr> -->
+  </tr>
 </table>
 {% endblock %}
