--- a/application/templates/betting_offers/admin_offer_list.html
+++ b/application/templates/betting_offers/admin_offer_list.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<form method="POST" action="{{ url_for('bet_coupons_form') }}">
   <table border="1" cellspacing="8">
     <tr align="left">
       <th>Home team</th>
@@ -10,6 +9,8 @@
 			<th>Odds for draw</th>
       <th>Odds for away win</th>
       <th>Maximum stake</th>
+      <th>Active</th>
+      <th>Closed</th>
     </tr>
     {% for match_offer in match_offer_tuples %}
     <tr align="left">
@@ -19,17 +20,20 @@
       <td>{{ match_offer[1].odds_x }}</td>
       <td>{{ match_offer[1].odds_2 }}</td>
       <td>{{ match_offer[1].max_stake }}</td>
+      <td>{{ match_offer[1].active }}</td>
+      <td>{{ match_offer[1].closed }}</td>
       <td>
-        <input type="radio" name={{ match_offer[1].id }} value="Add" checked="checked"> Add to bet coupon
-        <input type="radio" name={{ match_offer[1].id }} value="Remove" checked="checked"> Remove from bet coupon
+        <form method="GET" action="{{ url_for('betting_offers_update', offer_id = match_offer[1].id) }}">
+	  			<input type="submit" value="Update offer"/>
+        </form>
+      </td>
+      <td>
+        <form method="POST" action="{{ url_for('betting_offers_delete', offer_id = match_offer[1].id) }}">
+	  			<input type="submit" value="Delete offer"/>
+        </form>
       </td>
     </tr>
     {% endfor %}
-    <tr>
-      <td>
-        <input type="submit" value="Create a bet coupon"/>
-      </td>
-    </tr>
   </table>
 </form>
 {% endblock %}
