--- a/application/templates/betting_offers/admin_offer_list.html
+++ b/application/templates/betting_offers/admin_offer_list.html
@@ -23,9 +23,7 @@
       <td>{{ match_offer[1].active }}</td>
       <td>{{ match_offer[1].closed }}</td>
       <td>
-        <form method="GET" action="{{ url_for('betting_offers_update', offer_id = match_offer[1].id) }}">
-	  			<input type="submit" value="Update offer"/>
-        </form>
+        <a href="{{ url_for('betting_offers_update', offer_id = match_offer[1].id) }}">Update offer</a>
       </td>
       <td>
         <form method="POST" action="{{ url_for('betting_offers_delete', offer_id = match_offer[1].id) }}">
