kaaviokuvien päiv, asennusohje tiedosto luonti

--- a/application/templates/statistics/show_distribution.html
+++ b/application/templates/statistics/show_distribution.html
@@ -33,7 +33,7 @@
       <td>{{ results[2][3] }}</td>
     </tr>
     <tr align="left">
-      <td>{{ "Money total:" }} {{ results[0][5] }}</td>
+      <td>{{ "Money total (Eur):" }} {{ results[0][5] }}</td>
       <td>{{ results[0][4] }}</td>
       <td>{{ results[1][4] }}</td>
       <td>{{ results[2][4] }}</td>
