Ottelun tuloksen asetus johtaa betting_offer_of_coupon päivitykseen, ja sitä kautta bet_coupon päivitykseen ja mahdollisesti lopulta voittojen maksuun pelaajalle tai sitten kupongin merkitsemiseen tappioksi (tähän riittää yhden kohteen väärin meno), kupongin panoksen validointiin täydennystä

--- a/application/templates/auth/show_user.html
+++ b/application/templates/auth/show_user.html
@@ -14,16 +14,12 @@
   </tr>
   <tr>
     <td>
-      <form method="GET" action="{{ url_for('bettor_update') }}">
-        <input type="submit" value="Update details"/>
-      </form>
+      <a href="{{ url_for('bettor_update') }}">Update details</a>
     </td>
   </tr>
   <tr>
     <td>
-      <form method="GET" action="{{ url_for('bettor_delete') }}">
-        <input type="submit" value="Start account deletion process"/>
-      </form>
+      <a href="{{ url_for('bettor_delete') }}">Start account deletion process</a>
     </td>
   </tr>
 </table>
