Listan pituuden logiikka säännön muokkaus

--- a/application/templates/betting_offers/offer_list.html
+++ b/application/templates/betting_offers/offer_list.html
@@ -29,7 +29,7 @@
     {% endfor %}
     <tr>
       <td>
-        {% if current_user.role != "ADMIN" and match_offer_tuples|length != 0 %}
+        {% if current_user.role != "ADMIN" and match_offer_tuples|length > 0 %}
         <input type="submit" value="Create a bet coupon"/>
         {% endif %}
       </td>
